Add module name to overgeneral-exceptions to suppress warnings

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -310,6 +310,6 @@ deprecated-modules="optparse,tkinter.tix"
 
 [tool.pylint.'EXCEPTIONS']
 overgeneral-exceptions= [
-    "BaseException",
-    "Exception"
+    "builtin.BaseException",
+    "builtin.Exception"
 ]
