--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -5,17 +5,18 @@ on:
   pull_request:
     branches: [ main ]
   release:
-    types: [created]    
+    types: [created]
   workflow_dispatch:
 
 jobs:
   validation:
-    uses: microsoft/action-python/.github/workflows/validation.yml@0.6.4
+    # uses: microsoft/action-python/.github/workflows/validation.yml@0.6.4
+    uses: microsoft/action-python/.github/workflows/validation.yml@0.7.3
     with:
       workdir: '.'
 
-  publish:
-    uses: microsoft/action-python/.github/workflows/publish.yml@0.6.4
-    secrets:
-      PYPI_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
-      TEST_PYPI_PASSWORD: ${{ secrets.TEST_PYPI_PASSWORD  }}
+  # publish:
+  #   uses: microsoft/action-python/.github/workflows/publish.yml@0.6.4
+  #   secrets:
+  #     PYPI_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+  #     TEST_PYPI_PASSWORD: ${{ secrets.TEST_PYPI_PASSWORD  }}
